@@ -141,7 +141,7 @@ class VirtualFileSystem(object):
     def exists(self, pathname):
         '''Does the file or directory exist?'''
 
-    def mknod(self, pathname, mode):
+    def mknod(self, pathname, mode, rdev=0):
         '''Create a filesystem node.'''
 
     def isdir(self, pathname):
