@@ -29,6 +29,9 @@ New features:
 * David Fries changed restore to set the group ownership if possible
   even when not root.  No warnings are issued if the attempt fails.
 
+* David Fries change Obnam so it can backup and restore the major and
+  minor numbers of character and block special files.
+
 Bug fixes:
 
 * The Obnam SFTP plugin would loop infinitely if it lost the
